# telesentinel-server

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1512e05b6dcb_init.py
app/: main.py
app/api/: deps.py  exc_handler.py  router.py
app/api/endpoints/: auth.py  users.py
app/core/: config.py  db.py  init_superuser.py  security.py
app/exc/: base.py
app/models/: user.py
app/repositories/: users.py
app/schemas/: auth.py  users.py
app/services/: auth.py  users.py
docker/: api.Dockerfile  entrypoint.sh  nginx.conf
tests/: test_security.py
